# nlmaps-tools

./: .gitignore  LICENSE  MANIFEST.in  README.md  demo.py  generate_nlmaps.sh  linearise_all.sh  make_overpass_queries.py  pyproject.toml  requirements.txt  setup.py  setup.sh
nlmaps_tools/: answer_mrl.py  answer_overpass.py  features_to_overpass.py  fix_nlmaps_v2.py  generate_mrl.py  generate_nl.py  make_tag_dict.py  mrl  nl_queries.txt  overpass_round_robin.py  parse_mrl.py  query.py  retrieve_locations.py  special_phrases.py  special_phrases.txt
nlmaps_tools/data/: additional_tags.json  dropped_keys.txt  most_common_tags.json  open_keys.txt  special_phrases.txt
nlmaps_tools/en_templates/around_query/: count_how_many_does_have.jinja2  count_in_how_many.jinja2  name_in_what.jinja2  name_what_does_have.jinja2  name_what_in_separate.jinja2  opening-hours_in_give.jinja2  opening-hours_in_when_open.jinja2
nlmaps_tools/en_templates/common/: count_are_there.jinja2  (+8 more)
nlmaps_tools/mrl/: README.md  __init__.py  functionalise.py  linearise.py  local_io.py  mrl.py  test.py
nlmaps_tools/mrl_templates/: around_query.jinja2  base_query.jinja2  dist.jinja2  in_query.jinja2
nlmaps_tools/overpass_templates/: around_query.jinja2  in_query.jinja2  macros.jinja2
nlmaps_tools/process/: __init__.py  __main__.py  models.py  process_tool.py  processing_tool.py  processors.py
test/: queries.py  test_generate_mrl.py  test_parse_and_generate.py  test_parse_mrl.py
tests/: test_generate_mrl.py
tests/process/: test_process_tool.py  test_processing_tool.py  test_processors.py
(+77 files in other folders)
